--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+  <meta charset="utf-8" />
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="BJS Water" />
+  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0077cc" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Primary Meta Tags -->
+  <title>BJS Water – Pure, Refreshing & Mineral-Rich Drinking Water</title>
+  <meta name="title" content="BJS Water – Pure, Refreshing & Mineral-Rich Drinking Water" />
+  <meta name="description" content="BJS Water provides high-quality, mineral-rich drinking water for a healthier lifestyle. Order fresh and pure water at your doorstep." />
+  <meta name="keywords" content="BJS Water, mineral water, pure water, refreshing water, drinking water delivery, healthy water, water bottles, hydration, premium water" />
+  <meta name="author" content="BJS Water Team" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.bjswater.com/" />
+  <meta property="og:title" content="BJS Water – Pure, Refreshing & Mineral-Rich Drinking Water" />
+  <meta property="og:description" content="Order BJS Water for fresh, healthy, and mineral-rich drinking water. Fast delivery, quality assurance, and unbeatable freshness." />
+  <meta property="og:image" content="%PUBLIC_URL%/bjswater-preview.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.bjswater.com/" />
+  <meta property="twitter:title" content="BJS Water – Pure, Refreshing & Mineral-Rich Drinking Water" />
+  <meta property="twitter:description" content="Order BJS Water for fresh, healthy, and mineral-rich drinking water. Fast delivery, quality assurance, and unbeatable freshness." />
+  <meta property="twitter:image" content="%PUBLIC_URL%/bjswater-preview.jpg" />
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
